--- a/css/layout/flex.html
+++ b/css/layout/flex.html
@@ -13,7 +13,7 @@
         box-sizing: border-box;
     }
     div {
-        height: 100px;
+        min-height: 100px;
     }
 
     .container {
@@ -24,15 +24,18 @@
 
     .left {
         background: red;  
-        width: 180px;
+        /* width: 100px; */
+        flex: 0 0 100px;
     }
     .middle {
         background: yellow; 
-        flex-grow: 1; 
+        /* flex-grow: 1;  */
+        flex: 1;
     }
     .right {
         background: blue;  
-        width: 180px;
+        /* width: 100px; */
+         flex: 0 0 100px;
     }
     
     
